--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -3,4 +3,22 @@
 	body {
 		@apply bg-brand-light text-brand-dark dark:bg-brand-dark dark:text-brand-light;
 	}
+
+	.custom-checkbox {
+		@apply appearance-none h-5 w-5 border border-gray-600 rounded-md bg-gray-800 checked:bg-blue-500 checked:border-transparent focus:outline-none transition duration-200;
+		position: relative;
+	}
+
+	.custom-checkbox:checked::after {
+		content: '';
+		position: absolute;
+		left: 6px;
+		top: 2px;
+		display: inline-block;
+		transform: rotate(45deg);
+		height: 12px;
+		width: 6px;
+		border-bottom: 2px solid #ffffff;
+		border-right: 2px solid #ffffff;
+	}
 }
