--- a/src/styles/notion.css
+++ b/src/styles/notion.css
@@ -252,3 +252,10 @@ h4 {
 	width: 100%;
 	height: 100%;
 }
+
+.notionDivider {
+	height: 2px;
+	border-width: 0;
+	background-color: rgba(255, 255, 255, 0.13);
+	display: block;
+}
