--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -9,6 +9,10 @@
 		position: relative;
 	}
 
+	.custom-link {
+		@apply font-medium text-blue-600 dark:text-blue-500 hover:underline
+	}
+
 	.custom-checkbox:checked::after {
 		content: '';
 		position: absolute;
