--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -12,7 +12,7 @@
 	}
 
 	.highlight {
-		@apply bg-transparent text-blue-light;
+		@apply bg-transparent text-blue-light font-bold;
 	}
 
 	.btn {
@@ -22,7 +22,7 @@
 		@apply flex items-center font-extrabold text-3xl md:text-4xl relative w-full uppercase gap-4 bg-clip-text text-transparent bg-gradient-to-r from-gray-100 to-gray-50 after:h-[1px] after:flex-1 after:bg-inherited text-brand-dark dark:text-brand-light;
 	}
 	.icon-link-btn {
-		@apply flex-center gap-2.5 px-2 p-1 rounded transition-colors hover:bg-badge-light dark:hover:bg-badge-dark items-start;
+		@apply flex-center gap-2.5 p-1 rounded-lg transition-colors hover:bg-badge-light dark:hover:bg-badge-dark items-start h-min;
 	}
 	.icon-link-btn--outline {
 		@apply border border-badge-dark;
