--- a/src/styles/notion.css
+++ b/src/styles/notion.css
@@ -100,7 +100,7 @@ h2 {
 	font-weight: 600;
 	font-size: 1.875em;
 	line-height: 1.3;
-	margin: 0px;
+	margin-top: 1.2rem;
 }
 
 h3 {
@@ -116,7 +116,7 @@ h3 {
 	font-weight: 600;
 	font-size: 1.5em;
 	line-height: 1.3;
-	margin: 0px;
+	margin-top: 1rem;
 }
 
 h4 {
@@ -132,15 +132,130 @@ h4 {
 	font-weight: 600;
 	font-size: 1.25em;
 	line-height: 1.3;
-	margin: 0px;
-}
-
-.notion-wrapper {
-	margin: 0.3rem 0;
+	margin-top: 0.8rem;
 }
 
 .code-snipped {
 	font-family: SFMono-Regular, Menlo, Consolas, 'PT Mono', 'Liberation Mono',
 		Courier, monospace;
 	font-size: 85%;
+}
+
+.bookmark {
+	width: 100%;
+	max-width: 100%;
+	margin-top: 8px;
+	margin-bottom: 8px;
+	background-color: var(--bg);
+}
+
+.bookmark img {
+	box-shadow: none;
+	margin: 0;
+	padding: 0;
+}
+
+.bookmarkContentsWrapper {
+	display: block;
+	color: inherit;
+	text-decoration: none;
+	flex-grow: 1;
+	min-width: 0px;
+}
+
+.bookmarkContents {
+	user-select: none;
+	cursor: pointer;
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap-reverse;
+	align-items: stretch;
+	text-align: left;
+	overflow: hidden;
+	border: 1px solid #cacaca;
+	border-radius: 3px;
+	position: relative;
+	color: inherit;
+	fill: inherit;
+}
+
+.bookmarkInfo {
+	flex: 4 1 180px;
+	padding: 12px 14px 14px;
+	overflow: hidden;
+	text-align: left;
+}
+
+.bookmarkTitle {
+	font-size: 14px;
+	line-height: 20px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	min-height: 24px;
+	margin-bottom: 2px;
+}
+
+.bookmarkDescription {
+	font-size: 12px;
+	line-height: 16px;
+	height: 32px;
+	overflow: hidden;
+}
+
+.bookmarkLinkWrapper {
+	display: flex;
+	margin-top: 6px;
+}
+
+.bookmarkLinkIcon {
+	width: 16px;
+	height: 16px;
+	min-width: 16px;
+}
+
+.bookmarkLink {
+	font-size: 12px;
+	line-height: 16px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	margin-left: 6px;
+}
+
+.bookmarkCoverWrapper1 {
+	flex: 1 1 180px;
+	display: block;
+	position: relative;
+}
+
+.bookmarkCoverWrapper2 {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	padding: 0;
+}
+
+.bookmarkCoverWrapper3 {
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+}
+
+.bookmarkCover {
+	display: block;
+	object-fit: cover;
+	border-radius: 1px;
+	width: 100%;
+	height: 100%;
+}
+
+.notionDivider {
+	height: 2px;
+	border-width: 0;
+	background-color: rgba(255, 255, 255, 0.13);
+	display: block;
 }
