--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -34,27 +34,8 @@
 		@apply bg-badge-light dark:bg-badge-dark;
 	}
 
-	.landing-action-btn {
-		@apply absolute bottom-[100px] left-[100px] text-center cursor-pointer border-solid border-white;
-	}
-
-	.landing-action-circle {
-		font-size: 2rem;
-		white-space: nowrap;
-		z-index: 10;
-	}
-
-	.landing-action-circle-background {
-		/* @apply bg-primary; */
-		@apply bg-landingUnlockPrimary;
-
-		content: '';
-		display: block;
-		position: absolute;
-		left: 0;
-		bottom: 0;
-		width: 80px;
-		height: 80px;
+	.left-section {
+		filter: drop-shadow(0px 10px 5px rgba(0, 0, 0, 0.5));
 	}
 
 	.left-section::before {
@@ -62,20 +43,9 @@
 
 		content: '';
 		position: absolute;
-		/* -webkit-clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%); */
-		/* clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%); */
-
+		-webkit-clip-path: polygon(0 0, 75% 0, 100% 100%, 0 100%);
 		clip-path: polygon(0 0, 75% 0, 100% 100%, 0 100%);
 		width: 150%;
 		height: 100%;
 	}
-
-	/* .right-section { */
-		/* @apply bg-landingLockRightBackground; */
-		/* clip-path: polygon(15% 0, 100% 0, 100% 100%, 0 100%); */
-		/* clip-path: polygon(15% 0, 100% 0, 100% 100%, 0 100%); */
-		/* background: #232332; */
-
-		/* clip-path: polygon(4% 0, 100% 0, 100% 100%, 17% 100%); */
-	/* } */
 }
