--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -54,6 +54,10 @@
 			bottom: 0;
 			left: 0;
 		}
+
+		.right-section {
+			transform: translate(-5%, -19%) scale(1.6);
+		}
 	}
 
 	@media screen and (min-width: 1025px) {
@@ -63,5 +67,11 @@
 			width: 150%;
 			height: 100%;
 		}
+	}
+
+	.bottom-section {
+		@apply z-10 absolute bottom-0 left-0 right-0 h-1/3 bg-landingLockLeftBackground;
+
+		clip-path: polygon(0 40%, 100% 15%, 100% 100%, 0% 100%);
 	}
 }
