fix: buttom-section, save landingState in localStorage

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -56,6 +56,12 @@
 		}
 
 		.right-section {
+			transform: translate(-5%, 2%) scale(1.4);
+		}
+	}
+
+	@media screen and (max-width: 768px) {
+		.right-section {
 			transform: translate(-5%, -19%) scale(1.6);
 		}
 	}
@@ -70,8 +76,7 @@
 	}
 
 	.bottom-section {
-		@apply z-10 absolute bottom-0 left-0 right-0 h-1/3 bg-landingLockLeftBackground;
-
-		clip-path: polygon(0 40%, 100% 15%, 100% 100%, 0% 100%);
+		@apply z-10 absolute bottom-0 left-0 right-0 h-1/4 bg-landingLockLeftBackground text-white;
+		clip-path: polygon(0 8vh, 100% 0%, 100% 100%, 0% 100%);
 	}
 }
