--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -4,30 +4,79 @@
 	.section {
 		@apply py-12 md:py-16;
 	}
+
 	.container-md {
 		@apply max-w-7xl mx-auto px-4;
 	}
-	mark {
-		@apply bg-transparent text-blue-light font-bold;
-	}
 
+	mark,
 	.highlight {
-		@apply bg-transparent text-blue-light font-bold;
+		@apply bg-transparent text-primary font-bold;
 	}
 
 	.btn {
-		@apply min-h-[40px] px-4 rounded-md bg-blue-light text-white inline-flex items-center justify-center whitespace-nowrap align-middle transition-colors duration-200 ease-linear relative hover:bg-blue-normal  focus:ring-1 focus:ring-blue-normal;
+		@apply min-h-[40px] px-4 rounded-md bg-primary text-white inline-flex items-center justify-center whitespace-nowrap align-middle transition-colors duration-200 ease-linear relative hover:bg-primaryDark focus:ring-1 focus:ring-blue-normal;
 	}
+
 	.heading-divider {
 		@apply flex items-center font-extrabold text-3xl md:text-4xl relative w-full uppercase gap-4 bg-clip-text text-transparent bg-gradient-to-r from-gray-100 to-gray-50 after:h-[1px] after:flex-1 after:bg-inherited text-brand-dark dark:text-brand-light;
 	}
+
 	.icon-link-btn {
 		@apply flex-center gap-2.5 p-1 rounded-lg transition-colors hover:bg-badge-light dark:hover:bg-badge-dark items-start h-min;
 	}
+
 	.icon-link-btn--outline {
 		@apply border border-badge-dark;
 	}
+
 	.icon-link-btn--active {
 		@apply bg-badge-light dark:bg-badge-dark;
+	}
+
+	.left-section {
+		filter: drop-shadow(0px 10px 5px rgba(0, 0, 0, 0.5));
+	}
+
+	.left-section::before {
+		@apply bg-landingLockLeftBackground;
+
+		content: '';
+		position: absolute;
+	}
+
+	@media screen and (max-width: 1024px) {
+		.left-section::before {
+			-webkit-clip-path: polygon(0 39%, 100% 0, 100% 100%, 0% 100%);
+			clip-path: polygon(0 39%, 100% 0, 100% 100%, 0% 100%);
+			width: 100%;
+			height: 100%;
+			bottom: 0;
+			left: 0;
+		}
+
+		.right-section {
+			transform: translate(-5%, 2%) scale(1.4);
+		}
+	}
+
+	@media screen and (max-width: 768px) {
+		.right-section {
+			transform: translate(-5%, -19%) scale(1.6);
+		}
+	}
+
+	@media screen and (min-width: 1025px) {
+		.left-section::before {
+			-webkit-clip-path: polygon(0 0, 75% 0, 100% 100%, 0 100%);
+			clip-path: polygon(0 0, 75% 0, 100% 100%, 0 100%);
+			width: 150%;
+			height: 100%;
+		}
+	}
+
+	.bottom-section {
+		@apply z-10 absolute bottom-0 left-0 right-0 h-1/4 bg-landingLockLeftBackground text-white;
+		clip-path: polygon(0 8vh, 100% 0%, 100% 100%, 0% 100%);
 	}
 }
